--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -1,3 +1,7 @@
+.home {
+    padding: 20px
+}
+
 .navbar {
     background: #f5f5f5;
 }
@@ -27,41 +31,9 @@
     overflow: hidden;
 }
 
-@media (min-width: 576px) {
-    #resetSearch {
-        order: 0;
-    }
-}
-
-@media (min-width: 990px) {
-    .collapse:not(.show) {
-        height: 100%;
-    }
-
-    #navbarSupportedContent {
-        flex-flow: row;
-    }
-
-    .search-form {
-        margin-left: auto;
-        margin-right: 0;
-    }
-
-    #resetSearch {
-        order: 0;
-    }
-
-}
-
-
 .navbar-toggler-icon:checked + #navbarSupportedContent {
     height: 150px;
 }
-
-/*.form-inline {*/
-    /*left: 100%;*/
-    /*position: absolute;*/
-/*}*/
 
 #root {
     background: #eee;
@@ -166,4 +138,30 @@ h2 {
 .country-logo {
     max-width: 100%;
     max-height: 100%;
+}
+
+@media (min-width: 576px) {
+    #resetSearch {
+        order: 0;
+    }
+}
+
+@media (min-width: 990px) {
+    .collapse:not(.show) {
+        height: 100%;
+    }
+
+    #navbarSupportedContent {
+        flex-flow: row;
+    }
+
+    .search-form {
+        margin-left: auto;
+        margin-right: 0;
+    }
+
+    #resetSearch {
+        order: 0;
+    }
+
 }
